# fftfit

./: .gitignore  justfile  pyproject.toml  setup.cfg  setup.py
src/fftfit/: __init__.py  _kernels.pyf  _version.py  core.py
