[metadata]
name = fftfit
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
long_description = file: README.md 
author_email = "ujjwalpanda97@gmail.com"
url = "https://github.com/astrogewgaw/fftfit"
long_description_content_type = text/markdown
description = "The FFTFIT algorithm, in Python."

project_urls = 
    Source Code = "https://github.com/astrogewgaw/fftfit"
    Bug Reports = "https://github.com/astrogewgaw/fftfit/issues"

classifiers =
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.6
include_package_data = True
install_requires = numpy>=1.20.0
setup_requires = setuptools_scm[toml]>=6.0

[options.packages.find]
where=src
